erDiagram

    %% =========================
    %% FILE : 로그 파일 메타 (파일명이 1급 데이터)
    %% =========================
    FILE {
        string file_id PK "파일 내부 PK"
        string file_name "원본 로그 파일명"
        datetime file_datetime "파일명 기준 생성 일시 (YYYYMMDD)"
        int file_sequence "파일명 내 시퀀스 번호"
        string line_id "라인 번호 (파일명 05)"
        int process_no "공정 번호 (파일명 1)"
        int stage_no "Stage 번호 (파일명 1)"
        int machine_order "Machine 번호 (파일명 3,4...)"
        string lot_name "Lot 이름 (파일명)"
        string file_type "로그 타입 (u01=시간/정지, u03=픽업/에러)"
    }

    %% =========================
    %% LOT : Lot 단위 정보
    %% =========================
    LOT {
        string lot_id PK "Lot 내부 PK"
        string lot_name "Lot 명"
        datetime start_time "Lot 시작 시각"
        datetime end_time "Lot 종료 시각"
        string lane "Lane 정보"
    }

    %% =========================
    %% MACHINE : 설비 마스터
    %% =========================
    MACHINE {
        string machine_id PK "설비 PK"
        string line_id "라인 번호"
        int stage_no "Stage 번호"
        int machine_order "Machine 순번"
    }

    %% =========================
    %% LOT_MACHINE : Lot × Machine 실행 단위
    %% =========================
    LOT_MACHINE {
        string lot_machine_id PK "Lot-Machine 실행 PK"
        string lot_id FK "Lot FK"
        string machine_id FK "Machine FK"
    }

    %% =========================
    %% FILE_LOT_MACHINE : 파일 ↔ 실행 매핑
    %% =========================
    FILE_LOT_MACHINE {
        string file_id FK "원본 파일 FK"
        string lot_machine_id FK "Lot-Machine FK"
    }

    %% =========================
    %% MACHINE_TIME_SUMMARY : 시간 집계
    %% =========================
    MACHINE_TIME_SUMMARY {
        string lot_machine_id FK "Lot-Machine FK"
        int power_on_time_sec "Power ON 누적 시간"
        int running_time_sec "Running 시간"
        int real_running_time_sec "실제 생산 시간"
        int total_stop_time_sec "총 정지 시간"
        int transfer_time_sec "이송 시간"
        int board_recognition_time_sec "보드 인식 시간"
        int placement_time_sec "실장 시간"
    }

    %% =========================
    %% STOP_REASON : 정지 코드 사전
    %% =========================
    STOP_REASON {
        string stop_reason_code PK "정지 코드"
        string stop_reason_name "정지 사유 명칭"
        string stop_reason_group "WAIT / ERROR / QUALITY / SETUP"
    }

    %% =========================
    %% STOP_LOG : 정지 이력 (누적 기반)
    %% =========================
    STOP_LOG {
        string stop_log_id PK "정지 이력 PK"
        string lot_machine_id FK "Lot-Machine FK"
        string stop_reason_code FK "정지 사유 코드"
        int duration_sec "정지 누적 시간"
        int stop_count "정지 발생 횟수"
        string source_file_id FK "출처 파일 ID"
    }

    %% =========================
    %% PICKUP_ERROR_SUMMARY : 설비 품질 요약
    %% =========================
    PICKUP_ERROR_SUMMARY {
        string lot_machine_id FK "Lot-Machine FK"
        int total_pickup_count "총 Pickup 횟수"
        int total_error_count "총 에러 수"
        int pickup_error_count "Pickup 에러 수"
        int recognition_error_count "인식 에러 수"
        int thick_error_count "두께 에러 수"
        int placement_error_count "실장 에러 수"
        int part_drop_error_count "부품 낙하 에러"
        int transfer_unit_part_drop_error_count "이송부 낙하 에러"
        int pre_pickup_inspection_error_count "픽업 전 검사 에러"
    }

    %% =========================
    %% COMPONENT : 부품/구성요소 마스터
    %% =========================
    COMPONENT {
        string component_id PK "Component PK"
        string machine_id FK "Machine FK"
        string table_id "Table 번호"
        string feeder_id "Feeder 번호"
        string feeder_serial "Feeder 시리얼"
        string nozzle_changer "Nozzle Changer"
        string nozzle_holder "Nozzle Holder"
        string nozzle_serial "Nozzle 시리얼"
        string part_number "부품 번호"
        string library_name "라이브러리 명"
    }

    %% =========================
    %% COMPONENT_PICKUP_SUMMARY : 구성요소별 집계
    %% =========================
    COMPONENT_PICKUP_SUMMARY {
        string lot_machine_id FK "Lot-Machine FK"
        string component_id FK "Component FK"
        int pickup_count "Pickup 횟수"
        int error_count "에러 수"
        int pickup_error_count "Pickup 에러 수"
        int recognition_error_count "Recognition 에러 수"
        string source_file_id FK "출처 파일 ID"
    }

    %% =========================
    %% TAG_CATEGORY : 태그 분류
    %% =========================
    TAG_CATEGORY {
        string tag_category_id PK "태그 분류 PK"
        string tag_category_name "태그 분류명"
        string parent_category_id FK "상위 분류 PK (옵션)"
        string description "분류 설명"
    }

    %% =========================
    %% TAG_INFO : 태그 기준 정보
    %% =========================
    TAG_INFO {
        string tag_id PK "태그 PK"
        string tag_name "태그명"
        string tag_category_id FK "태그 분류 FK"
        string machine_id FK "Machine FK (옵션)"
        string data_type "데이터 타입 (int/float/string)"
        string unit "단위"
        string source_system "수집 시스템"
        boolean is_active "사용 여부"
        string description "태그 설명"
    }

    %% =========================
    %% TAG_SPEC : 태그 기준값/스펙
    %% =========================
    TAG_SPEC {
        string tag_spec_id PK "태그 기준 PK"
        string tag_id FK "Tag FK"
        string spec_type "기준 타입 (TARGET/LCL/UCL)"
        float spec_value "기준 값"
        datetime effective_from "적용 시작"
        datetime effective_to "적용 종료"
    }

    %% =========================
    %% TAG_REALTIME : 실시간 데이터 적재
    %% =========================
    TAG_REALTIME {
        string tag_data_id PK "실시간 데이터 PK"
        string tag_id FK "Tag FK"
        string machine_id FK "Machine FK (옵션)"
        datetime recorded_at "측정 시각"
        float tag_value "태그 값"
        string quality_flag "품질 플래그"
        string source_file_id FK "출처 파일 ID (옵션)"
    }


    %% =========================
    %% BEINGPLUS_INGEST_QUEUE : 프로시저 호출 전 입력 큐
    %% =========================
    BEINGPLUS_INGEST_QUEUE {
        bigint queue_id PK "수집 큐 PK"
        string line_code "라인 코드"
        string work_code "작업 코드"
        string equip_code "설비 코드"
        string address "태그 주소"
        string tag_type "태그 타입 (0/1/2/3/4...)"
        string tag_value "태그 값 원문"
        datetime device_dt "장비 측정 시각"
        datetime receive_dt "수신 시각(UTC)"
        string status "PENDING/SENT/FAILED"
        int retry_count "재시도 횟수"
        string last_error "마지막 오류 메시지"
    }

    %% =========================
    %% BEINGPLUS_PROC_LOG : 프로시저 실행 로그
    %% =========================
    BEINGPLUS_PROC_LOG {
        bigint proc_log_id PK "프로시저 로그 PK"
        bigint queue_id FK "수집 큐 FK (옵션)"
        string line_code "라인 코드"
        string work_code "작업 코드"
        string equip_code "설비 코드"
        string address "태그 주소"
        string tag_type "태그 타입"
        string tag_value "태그 값 원문"
        datetime device_dt "장비 측정 시각"
        datetime call_dt "프로시저 호출 시각(UTC)"
        int elapsed_ms "호출 소요 시간(ms)"
        string rs_code "프로시저 결과 코드"
        string rs_msg "프로시저 결과 메시지"
    }

    %% =========================
    %% RELATIONSHIPS
    %% =========================
    FILE ||--o{ FILE_LOT_MACHINE : maps
    LOT ||--o{ LOT_MACHINE : has
    MACHINE ||--o{ LOT_MACHINE : runs
    LOT_MACHINE ||--o{ FILE_LOT_MACHINE : sourced_from

    LOT_MACHINE ||--|| MACHINE_TIME_SUMMARY : aggregates
    STOP_REASON ||--o{ STOP_LOG : classifies
    LOT_MACHINE ||--o{ STOP_LOG : causes

    LOT_MACHINE ||--|| PICKUP_ERROR_SUMMARY : summarizes
    MACHINE ||--o{ COMPONENT : owns
    COMPONENT ||--o{ COMPONENT_PICKUP_SUMMARY : counted_by

    TAG_CATEGORY ||--o{ TAG_CATEGORY : parent_of
    TAG_CATEGORY ||--o{ TAG_INFO : groups
    MACHINE ||--o{ TAG_INFO : defines
    TAG_INFO ||--o{ TAG_SPEC : has
    TAG_INFO ||--o{ TAG_REALTIME : streams
    MACHINE ||--o{ TAG_REALTIME : measures
    FILE ||--o{ TAG_REALTIME : sourced_from
    BEINGPLUS_INGEST_QUEUE ||--o{ BEINGPLUS_PROC_LOG : traces
